--- a/pom.xml
+++ b/pom.xml
@@ -3,29 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.geysermc</groupId>
-    <artifactId>geyser-resources</artifactId>
-    <version>1.0.1</version>
+    <groupId>resourcegen</groupId>
+    <artifactId>dragonproxy-resources</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>Geyser-Resources</name>
-    <description>Resources for Geyser.</description>
-    <url>https://geysermc.org</url>
+
     <properties>
-        <outputName>GeyserMC-Resources</outputName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <organization>
-        <name>GeyserMC</name>
-        <url>https://github.com/GeyserMC/Geyser-Resources/blob/master/pom.xml</url>
-    </organization>
-    <scm>
-        <connection>scm:git:https://github.com/GeyserMC/Geyser-Resources.git</connection>
-        <developerConnection>scm:git:git@github.com:GeyserMC/Geyser-Resources.git</developerConnection>
-        <url>https://github.com/GeyserMC/Geyser-Resources</url>
-    </scm>
+
     <repositories>
         <repository>
             <id>spigot-repo</id>
@@ -36,6 +25,7 @@
             <url>https://mvnrepository.com/artifact/com.google.code.gson/gson</url>
         </repository>
     </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
@@ -49,20 +39,43 @@
             <version>2.8.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
+
     <build>
-        <finalName>GeyserResources</finalName>
-        <resources>
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>*</include>
-                </includes>
-            </resource>
-        </resources>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>resourcegen.Main</mainClass>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
